Fix: Firefox not displaying input correctly, Line animation not showing

--- a/src/pages/home/components/Articles/components/Article/Article.module.css
+++ b/src/pages/home/components/Articles/components/Article/Article.module.css
@@ -36,6 +36,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
+  z-index: 1;
 
   background: -webkit-linear-gradient(
     140deg,
