--- a/src/pages/home/components/Contact/components/Form/Form.module.css
+++ b/src/pages/home/components/Contact/components/Form/Form.module.css
@@ -33,7 +33,6 @@
 }
 
 .form input::placeholder {
-  font-family: Montserrat, sans-serif;
   font-weight: 500;
   font-size: 1rem;
 
@@ -66,7 +65,6 @@
 }
 
 .form textarea::placeholder {
-  font-family: Montserrat, sans-serif;
   font-weight: 500;
   font-size: 1rem;
 
